--- a/client/package.json
+++ b/client/package.json
@@ -4,22 +4,27 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@tailwindcss/forms": "^0.3.4",
     "clsx": "^1.1.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
     "autoprefixer": "^10.4.0",
+    "jest": "^27.3.1",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.19",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   }
