--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/jacobjonsson/avc#readme",
   "dependencies": {
     "fastify": "^3.24.0",
+    "fastify-cookie": "^5.3.2",
     "fastify-cors": "^6.0.2",
     "fastify-postgres": "^3.6.0",
     "nanoid": "^3.1.30",
