Refactor to use xstate

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -6,12 +6,12 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
+    "module": "esnext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["./src/*"]
+  "include": ["./src"]
 }
