--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.3.4",
+    "@xstate/react": "^1.6.2",
     "clsx": "^1.1.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^6.0.2"
+    "react-router-dom": "^6.0.2",
+    "xstate": "^4.26.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
